--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "apexcharts": "^3.26.1",
         "bootstrap": "^5.1.3",
         "clsx": "^1.1.1",
+        "date-fns": "^2.25.0",
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
         "history": "^5.0.0",
