--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "berry-material-react-free",
+    "name": "sustech-hgz",
     "version": "3.0.0",
     "private": true,
     "homepage": "https://berrydashboard.io/free",
